openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: math-solution-spring-client
  labels:
    app.kubernetes.io/name: math-solution-spring-client
spec:
  selector:
    app.kubernetes.io/name: math-solution-spring-client
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
